freesia/manifests/temporis/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: https
    cloudflare-tunnel-ingress-controller.strrl.dev/http-host-header: prometheus.harvestasya.org
    cloudflare-tunnel-ingress-controller.strrl.dev/origin-server-name: prometheus.harvestasya.org
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: prometheus.harvestasya.org
    http:
      paths:
      - backend:
          service:
            name: traefik-proxy
            port:
              name: https
        path: /
        pathType: Prefix
