freesia/manifests/temporis/prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus

spec:
  routes:
  - kind: Rule
    match: Host(`prometheus.harvestasya.org`)
    services:
    - name: prometheus
      port: 9090
